change align-middle to align-center; fix error while extending placeholder inside of media query

--- a/source/_variables.scss
+++ b/source/_variables.scss
@@ -30,7 +30,7 @@ $alignments: (
   align-top: (
     align-items: flex-start
   ),
-  align-middle: (
+  align-center: (
     align-items: center
   ),
   align-bottom: (
